# Cowork

./: .gitignore  AGENTIC_WORKFLOW_TEST_PROMPT.md  QUICK_TEST_PROMPTS.md
cowork/core_api/: .env  alembic.ini  pyproject.toml
cowork/core_api/alembic/: env.py
cowork/core_api/alembic/versions/: 0001_init_schema.py  0002_add_chat_messages.py  0003_add_memory_tables.py  0004_add_chatmessage_fts_index.py  0005_add_search_usage.py  0006_add_provider_feature_flags.py  0007_add_skills_tables.py  0008_add_skill_discovery_metadata.py  0009_add_memory_governance_and_skill_security.py
cowork/core_api/app/: __init__.py  auth.py  config.py  config_catalog.py  crypto.py  db.py  internal_auth.py  main.py  models.py  oauth_adapter.py  oauth_service.py  oauth_state.py  security.py  share.py  skill_security.py  skills_catalog.py  storage.py
cowork/core_api/app/api/: __init__.py  artifacts.py  auth.py  auth_cookies.py  config.py  health.py  history.py  mcp.py  mcp_proxy.py  memory.py  messages.py  model.py  oauth.py  provider_features.py  providers.py  search.py  sessions.py  share.py  skills.py  snapshots.py  steps.py
cowork/core_api/scripts/: cleanup_polluted_artifacts.py
cowork/core_api/tests/: conftest.py  test_auth_cookies.py  test_auth_endpoints.py  test_conftest_fixtures.py  test_desktop_sqlite.py  test_event_idempotency.py  test_history_grouped.py  test_mcp_api.py  test_memory_api.py  test_memory_search_sqlite.py  test_oauth_callback.py  test_providers_api.py  test_search_exa.py  test_skills_api.py  test_skills_catalog.py
cowork/orchestrator/: .env  conftest.py  pyproject.toml
cowork/orchestrator/app/: auth.py  config.py  main.py
cowork/orchestrator/app/api/: __init__.py  chat.py  (+3 more)
cowork/orchestrator/tests/: test_camel_runtime.py  test_chat_auth.py  test_compose_message_tool.py  test_llm_token_estimation.py  test_manager_memory.py  test_memory_policy.py  test_permission_policy.py  test_runtime_module_split.py  test_skill_benchmarks.py  test_skill_engine.py  test_stop_reasons.py  test_title_sanitization.py  test_tool_catalog.py  test_tool_permissions.py  test_tool_result_contract.py
(+170 files in other folders)
