[project]
name = "cowork-core-api"
version = "0.1.0"
description = "Core API service for persistence and account management"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "passlib[bcrypt]>=1.7.4",
]

[tool.ruff]
line-length = 120
