[project]
name = "cowork-orchestrator"
version = "0.1.0"
description = "Orchestrator service for multi-agent runtime and SSE streaming"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
]

[tool.ruff]
line-length = 120
